<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">


    <ProgressBar
        android:id="@+id/PB_login_fragment"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/RV_login_fragment"
        android:indeterminate="true"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/RV_login_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@color/blueGrey100"
        android:elevation="4dp"
        android:transitionName="@string/trans_layout_login">


        <TextView
            android:id="@+id/TV_title_login_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/text_login_with"
            android:textSize="@dimen/textSize_body"
            android:transitionName="@string/trans_text_title_login" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TI_email_login_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TV_title_login_fragment"
            android:fontFamily="sans-serif"
            android:transitionName="@string/trans_text_subheader_login">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ET_email_login_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif"
                android:hint="@string/label_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/textSize_body" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TI_password_login_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TI_email_login_fragment"
            android:fontFamily="sans-serif">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ET_password_login_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="sans-serif"
                android:hint="@string/label_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textSize="@dimen/textSize_body" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/BT_confirm_login_fragment"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/TI_password_login_fragment"
            android:layout_margin="16dp"
            android:text="@string/button_login" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LL_register_login_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RV_login_fragment"
        android:weightSum="3">

        <FrameLayout
            android:id="@+id/FL_register_login_fragment"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:transitionName="@string/trans_layout_register" />

    </LinearLayout>


</RelativeLayout>
