<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">


    <RelativeLayout
        android:id="@+id/RL_register_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:transitionName="@string/trans_layout_register">


        <TextView
            android:id="@+id/TV_title_register_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/text_register"
            android:textColor="@color/white54"
            android:textSize="@dimen/textSize_body"
            android:transitionName="@string/trans_text_title_register" />

        <TextView
            android:id="@+id/TV_subheader_register_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TV_title_register_fragment"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/text_new_account"
            android:textColor="@color/white87"
            android:textSize="@dimen/textSize_display1"
            android:transitionName="@string/trans_text_subheader_register" />


        <ProgressBar
            android:id="@+id/PB_register_fragment"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_above="@+id/LL_register_fragment"
            android:indeterminate="true"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/LL_register_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/TV_subheader_register_fragment"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TI_email_register_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColorHint="@color/white"
                android:theme="@style/AllWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ET_email_register_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/label_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize_body" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TI_password_register_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColorHint="@color/white"
                android:theme="@style/AllWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ET_password_register_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/label_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize_body"
                    android:theme="@style/AllWhite" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TI_password2_register_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColorHint="@color/white"
                android:theme="@style/AllWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ET_password2_register_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/label_confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize_body"
                    android:theme="@style/AllWhite" />

            </android.support.design.widget.TextInputLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/BT_create_register_fragment"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="16dp"
                    android:text="@string/button_create" />


            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LL_register_login_with_mail_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RL_register_fragment"
        android:weightSum="3">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="8dp"
            android:layout_weight="1"
            android:background="@color/blueGrey100"
            android:transitionName="@string/trans_layout_login" />

    </LinearLayout>


</RelativeLayout>
