<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">


    <RelativeLayout
        android:id="@+id/RL_complete_profile_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:transitionName="@string/trans_text_login">


        <TextView
            android:id="@+id/TV_title_complete_profile_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/text_one_last_thing"
            android:textColor="@color/white54"
            android:textSize="@dimen/textSize_body" />

        <TextView
            android:id="@+id/TV_subheader_complete_profile_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TV_title_complete_profile_fragment"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/warning_display_name_needed"
            android:textColor="@color/white87"
            android:textSize="@dimen/textSize_display1" />

        <ProgressBar
            android:id="@+id/PB_complete_profile_fragment"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/LL_complete_profile_fragment"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:indeterminateTintMode="src_atop"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/LL_complete_profile_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/TV_subheader_complete_profile_fragment"
            android:gravity="center"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/TI_name_complete_profile_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColorHint="@color/white"
                android:theme="@style/AllWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ET_name_complete_profile_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/label_display_name"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize_body"
                    android:theme="@style/AllWhite" />

            </android.support.design.widget.TextInputLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/BT_continue_complete_profile_fragment"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="16dp"
                    android:text="@string/button_continue"
                    android:textColor="@color/white" />


            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
